Nouvelle modification da la couleur de fond

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Test Git</title>
 </head>
-<body style="background-color:#1abc9C">
+<body style="background-color:#6a89cc">
     <h1 style="padding-top: 20%; padding-bottom: 20%; text-align: center;color: #FFFFFF">Location de voitures anciens</h1>
 
 </body>
